# secil

./: .gitignore  CMakeLists.txt  README.md  build_project.sh  secil.proto  secil_build.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: Dockerfile
.github/workflows/: docker_run.yaml  secil_build.yaml
example/: common.c  common.h  eme_example.c  se_example.c
examples/: common.c  common.h  test.c  test_esp32_uart.c  test_linux_fifo.c  test_loopback.c
include/: secil.h
install/: CMakeLists.txt
lib/: secil.c  secil.pb.c  secil.pb.h
schema/: CMakeLists.txt  secil.proto
source/: secil.c
test/: test_loopback.c
